projects/compiler/test/typechecker/match/error_nooverlap_None.out
Error at %FILE_NAME%:2:3
Unreachable match case
  |    None => {}
       ^
Match target type 'Int' can never be None
