projects/compiler/test/typechecker/match/error_nooverlap_None.abra
match 123 {
  None => {}
}